# AIAgentDevelopment

./: .gitignore  CLAUDE.md  langgraph.json  main.py  pyproject.toml  requirements.txt
Agentic AI Engineering/: OpenAI Agents.ipynb  docling_agent.ipynb
Agentic AI Engineering/1_Foundations/: 3_Web_Chatbot.ipynb  4_LLM_Function_Calling.ipynb  AI workflow with Openai.ipynb  Multi LLM API.ipynb  XAI First Call.ipynb
Agentic AI Engineering/1_Foundations/me/: about.txt
Agentic AI Engineering/2_OpenAI_Agents_SDK/: 1_Introduction to Agents.ipynb  2_AI Sales Agent with TestMail.ipynb  database_agent.py
Agentic AI Engineering/LangChain/: 1-Data-Ingestion.ipynb  2-Text-Splitter.ipynb
Agentic AI Engineering/LangGraph/: AI_Agents.py  fundamental.ipynb  fundamental.py  langsmith_ex.py
Document/: speech.txt
Learning_Notes/: M1 Basic FAQ Agent.ipynb  M2_2 OpenAI Agent.ipynb  M3_1 Short Long Memory.ipynb  M3_2 FAISS Vector DB.ipynb  M6 DB Chat Context.ipynb  M7_1 Image Gen Agent.ipynb  M7_3 STT and TTS Eleven labs.ipynb
M1_Introduction_AI_Agents/: FAQ Bot.ipynb
Ostad AI Agent Development Bootcamp/Learning_Notes/: M1 Basic FAQ Agent.ipynb  M2_1 LLM getting started.ipynb  M3_1 Short Long Memory.ipynb  M5_1 Real Time Updated Data - Partial.ipynb  M7_2 Image recognition.ipynb
Ostad AI Agent Development Bootcamp/M2_Understanding_LLMs_Prompt_Engineering/: AI Writing Assistant.ipynb
Ostad AI Agent Development Bootcamp/M3_Memory_&_Context_Awareness_in_AI_Agents/: Context-Aware-Chatbot.ipynb  Project - Build a Context-Aware Chatbot Project.md
[deprecate] Ostad AI Agent Development Bootcamp/Learning_Notes/: M2_2 OpenAI Agent.ipynb  M4 Optomizing Agents.ipynb  M5_2 Scraper.ipynb
[deprecate] Ostad AI Agent Development Bootcamp/M5_AI_Powered_News_Aggregator/: AI-Powered News Aggregator.ipynb
