[project]
name = "ai-agent-development"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.9.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.1.2",
    "langchain-openai>=0.3.28",
    "notebook>=7.3.3",
    "openai>=1.98.0",
    "python-dotenv>=1.1.0",
]
#uv sync upgrade # to update all dependencies