[project]
name = "ai-agent-development"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.62.0",
    "chromadb>=1.0.15",
    "docling>=2.48.0",
    "google-genai>=1.9.0",
    "gradio>=5.42.0",
    "jupyter>=1.1.1",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.5",
    "loguru>=0.7.3",
    "notebook>=7.3.3",
    "openai>=1.98.0",
    "openai-agents>=0.2.4",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.0",
    "xai-sdk>=1.0.1",
]
#uv sync upgrade # to update all dependencies